--- a/src/app/theme-colors.scss
+++ b/src/app/theme-colors.scss
@@ -35,4 +35,4 @@ $navigation-color-dark: rgba(0, 0, 0, 0.4);
 $navigation-highlight-color-dark: rgba(255, 255, 255, 0.3);
 
 // Common
-$darkmode-transition: cubic-bezier(0.87, 0, 0.13, 1);
+$darkmode-transition: 0.5s cubic-bezier(0.87, 0, 0.13, 1);
