--- a/src/components/layout/footer/style.module.scss
+++ b/src/components/layout/footer/style.module.scss
@@ -2,6 +2,7 @@
 	width: 100%;
 	margin-top: 5rem;
 	border-top: 1px solid var(--color-border);
+	transition: border var(--style-darkmode-transition);
 }
 
 .content {
