--- a/src/components/layout/header/style.module.scss
+++ b/src/components/layout/header/style.module.scss
@@ -16,8 +16,8 @@
 	background-color: var(--color-header-right);
 	box-shadow: var(--color-shadow);
 	z-index: 100;
-	transition: background-color 0.5s var(--style-darkmode-transition),
-		box-shadow 0.5s var(--style-darkmode-transition);
+	transition: background-color var(--style-darkmode-transition),
+		box-shadow var(--style-darkmode-transition);
 
 	.leftBlock {
 		position: fixed;
@@ -52,10 +52,8 @@
 
 			position: absolute;
 
-			transition-delay: 0s;
-			transition-duration: 0.5s;
-			transition-property: all;
-			transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+			transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1),
+				background-color var(--style-darkmode-transition);
 
 			&:nth-child(1) {
 				top: 0%;
