--- a/src/components/layout/navigation/style.module.scss
+++ b/src/components/layout/navigation/style.module.scss
@@ -18,8 +18,8 @@
 	background-color: var(--color-navigation);
 	box-shadow: var(--color-shadow);
 	backdrop-filter: blur(2rem);
-	transition: background-color 0.5s var(--style-darkmode-transition),
-		box-shadow 0.5s var(--style-darkmode-transition);
+	transition: background-color var(--style-darkmode-transition),
+		box-shadow var(--style-darkmode-transition);
 	z-index: 90;
 }
 
