--- a/src/components/layout/postbox/style.module.scss
+++ b/src/components/layout/postbox/style.module.scss
@@ -9,9 +9,9 @@
 	border: 1px solid var(--color-box-border);
 	background-color: var(--color-box);
 	box-shadow: var(--color-shadow);
-	transition: background-color 0.5s var(--style-darkmode-transition),
-		border 0.5s var(--style-darkmode-transition),
-		box-shadow 0.5s var(--style-darkmode-transition);
+	transition: background-color var(--style-darkmode-transition),
+		border var(--style-darkmode-transition),
+		box-shadow var(--style-darkmode-transition);
 	/*
 	&:nth-child(even) {
 		background-color: black;
